@@ -1156,8 +1156,8 @@ void game_controller::download_campaigns(std::string host)
 
 		config cfg;
 		cfg.add_child("request_campaign_list");
-		// @todo Should be enabled once the campaign server can be recompiled.
-		network::send_data(cfg, sock, false);
+
+		network::send_data(cfg, sock, true);
 
 		network::connection res = dialogs::network_receive_dialog(disp(),_("Asking for list of add-ons"),cfg,sock);
 		if(!res) {
@@ -1303,8 +1303,8 @@ void game_controller::download_campaigns(std::string host)
 
 		config request;
 		request.add_child("request_campaign")["name"] = campaigns[index];
-		// @todo Should be enabled once the campaign server can be recompiled.
-		network::send_data(request, sock, false);
+
+		network::send_data(request, sock, true);
 
 		res = dialogs::network_receive_dialog(disp(),_("Downloading add-on..."),cfg,sock);
 		if(!res) {
@@ -1381,8 +1381,8 @@ void game_controller::upload_campaign(const std::string& campaign, network::conn
 {
 	config request_terms;
 	request_terms.add_child("request_terms");
-	// @todo Should be enabled once the campaign server can be recompiled.
-	network::send_data(request_terms, sock, false);
+
+	network::send_data(request_terms, sock, true);
 	config data;
 	sock = network::receive_data(data,sock,5000);
 	if(!sock) {
@@ -1424,8 +1424,8 @@ void game_controller::upload_campaign(const std::string& campaign, network::conn
 	data.add_child("upload",cfg).add_child("data",campaign_data);
 
 	LOG_NET << "uploading campaign...\n";
-	// @todo Should be enabled once the campaign server can be recompiled.
-	network::send_data(data, sock, false);
+
+	network::send_data(data, sock, true);
 
 	sock = dialogs::network_send_dialog(disp(),_("Sending add-on"),data,sock);
 	if(!sock) {
@@ -1452,8 +1452,8 @@ void game_controller::delete_campaign(const std::string& campaign, network::conn
 	config data;
 	data.add_child("delete",msg);
 
-	// @todo Should be enabled once the campaign server can be recompiled.
-	network::send_data(data, sock, false);
+
+	network::send_data(data, sock, true);
 
 	sock = network::receive_data(data,sock,5000);
 	if(!sock) {
