@@ -647,7 +647,7 @@ connection receive_data(config& cfg, connection connection_num, unsigned int tim
 	return 0;
 }
 
-connection receive_data(config& cfg, connection connection_num)
+connection receive_data(config& cfg, connection connection_num, bool* gzipped)
 {
 	if(!socket_set) {
 		return 0;
@@ -702,7 +702,7 @@ connection receive_data(config& cfg, connection connection_num)
 
 	TCPsocket sock = connection_num == 0 ? 0 : get_socket(connection_num);
 	TCPsocket s = sock;
-	sock = network_worker_pool::get_received_data(sock,cfg);
+	sock = network_worker_pool::get_received_data(sock,cfg, gzipped);
 	if (sock == NULL) {
 		if (!is_server() && last_ping != 0 && ping_timeout != 0)
 		{
