@@ -11,6 +11,7 @@ Version 1.4.2+svn:
    * fix [teleport] capturing villages with the wrong side (bug #11683)
  * campaignd
    * made campaign server use gzip compression for networking
+   * made campaign server detect if client can receive gzipped data
  * miscellaneous and bug fixes:
    * fixed parser bug that prevented loading binary data strings
    * starting a campaing without any installed now gives an error.
